--- a/team.html
+++ b/team.html
@@ -1,64 +1,52 @@
 <!DOCTYPE HTML>
 <html lang="en">
-    <head>
+
+<head>
     <title>DEVELOPER ZONE SOFTWARE COMPANY | ZILLEALI | GUJRAT | PAKISTAN </title>
     <meta charset="utf-8" />
     <meta name="author" content="ZILL-E-ALI BUTT">
-	<meta property="og:title" content=" &amp;  DEVELOPER ZONE" />
+    <meta property="og:title" content=" &amp;  DEVELOPER ZONE" />
     <meta property="og:url" content="https://www.dz.zilleali.com/" />
-	<meta property="og:site_name" content="DEVELOPER ZONE COMPANAY" />
+    <meta property="og:site_name" content="DEVELOPER ZONE COMPANAY" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-	<meta property="og:description" content="Pakistan based Web Design and Development Company providing WordPress, Shopify and Larval solutions for all the businesses, simple or complex." />
-	<meta property="article:publisher" content="https://fb.me/developerzone12" />
-	<meta property="og:site_name" content="Developer Zone" />
-	<script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+    <meta property="og:description" content="Pakistan based Web Design and Development Company providing WordPress, Shopify and Larval solutions for all the businesses, simple or complex." />
+    <meta property="article:publisher" content="https://fb.me/developerzone12" />
+    <meta property="og:site_name" content="Developer Zone" />
+    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
     <!--<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />-->
     <link href="css/team.css" rel="stylesheet" />
+    <!-- End Google Tag Manager -->
+</head>
 
-     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-T6565DD');</script>
-        <!-- End Google Tag Manager -->
-    <noscript> <script>{gtm: {start: 1617617563995, uniqueEventId: 3}, event: 'gtm.load'}</script></noscript>
-        </head>
-   
-    <body>
-       <!-- Google Tag Manager (noscript) -->
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T6565DD"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-        <!-- End Google Tag Manager (noscript) -->
-        
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="index.html">
-                    <!--<img src="assets/img/navbar-logo.svg" alt="" />-->
-                    <img  alt="DEVELOPER ZONE" />
-                    </a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+<body>
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="index.html">
+                <!--<img src="assets/img/navbar-logo.svg" alt="" />-->
+                <img alt="DEVELOPER ZONE" />
+            </a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ml-1"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="portfolio.html">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="team.html">Team</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-                    </ul>
-                </div>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav text-uppercase ml-auto">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="portfolio.html">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="team.html">Team</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                </ul>
             </div>
-        </nav>
-        <!-- Masthead-->
-        <div>
-                 
+        </div>
+    </nav>
+    <!-- Masthead-->
+    <div>
+
         <!-- Team-->
-      <section class="page-section bg-light" id="team">
+        <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
@@ -67,7 +55,12 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.webp" alt="ZILL E ALI BUTT" />
+                            <picture>
+                                <source media="(min-width:650px)" srcset="assets/img/team/1.webp">
+                                <source media="(min-width:465px)" srcset="assets/img/team/1.webp">
+                                <img class="mx-auto rounded-circle" src="assets/img/team/1.webp" alt="ZILLEALI" style="width:auto;">
+                            </picture>
+                            <!-- <img class="mx-auto rounded-circle" src="assets/img/team/1.webp" alt="ZILL E ALI BUTT" /> -->
                             <h4>ZILL-E-ALI BUTT</h4>
                             <p class="text-muted"> Designer</p>
                             <a class="btn btn-dark btn-social mx-2" href=""><i class="fab fa-twitter"></i></a>
@@ -88,7 +81,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.webp" alt="UMAIR BUTT" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="UMAIR BUTT" />
                             <h4>UMAIR BUTT</h4>
                             <p class="text-muted">Lead Developer</p>
                             <!--<a class="btn btn-dark btn-social mx-2" href=""><i class="fab fa-twitter"></i></a>-->
@@ -98,13 +91,15 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+                    <div class="col-lg-8 mx-auto text-center">
+                        <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    </div>
                     <!--<i style="font-size:24px" class="fa">&#xf232;</i>-->
 
                 </div>
             </div>
         </section>
-     <!-- Footer-->
+        <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
@@ -113,7 +108,7 @@
                         <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/zilleali1245"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/developerzone12/"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/zilleali12/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="https://api.whatsapp.com/send?phone=923216255878&amp;text=+Hello%2C+I+visited+your+website+please+tell+me+about+works+%3F%0D%0A%0D%0A%2AI+have+visited+this+URL%3A%2A+https%3A%2F%2Fdz.zilleali.com+"><img src="https://img.icons8.com/material-two-tone/40/26e07f/whatsapp--v3.png"/></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://api.whatsapp.com/send?phone=923216255878&amp;text=+Hello%2C+I+visited+your+website+please+tell+me+about+works+%3F%0D%0A%0D%0A%2AI+have+visited+this+URL%3A%2A+https%3A%2F%2Fdz.zilleali.com+"><img src="https://img.icons8.com/material-two-tone/40/26e07f/whatsapp--v3.png" /></a>
 
                     </div>
                     <div class="col-lg-4 text-lg-right">
@@ -123,13 +118,14 @@
                 </div>
             </div>
         </footer>
-        </div>
-        <!--<script href="assets/optimize/optimize.js"></script>-->
-        <!-- Bootstrap core JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-        <!-- Third party plugin JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-        <script src="js/scripts.js"></script>
-    </body>
+    </div>
+    <!--<script href="assets/optimize/optimize.js"></script>-->
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="js/scripts.js"></script>
+</body>
+
 </html>
